--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve --port 8100",
+    "build": "ng build --prod --aot && cd dist/hris-indicator-app && zip -r -D hris-indicator-app.zip .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -22,9 +22,15 @@
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
     "@iapps/hris-menu": "^1.0.0-alpha.1",
+    "@ngrx/effects": "^8.4.0",
+    "@ngrx/entity": "^8.4.0",
+    "@ngrx/router-store": "^8.4.0",
+    "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.4.0",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.15",
+    "ngrx-store-freeze": "^0.2.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -34,9 +40,10 @@
     "@angular/cli": "~8.1.0",
     "@angular/compiler-cli": "~8.1.0",
     "@angular/language-service": "~8.1.0",
-    "@types/node": "~8.9.4",
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
